rdbms file updated with all the CRUD functions and HIVE added to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   http:
   sqflite:
   path_provider:
+  hive: ^2.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
